Fix mobile menu z-index

--- a/src/components/Navbar.styl
+++ b/src/components/Navbar.styl
@@ -53,6 +53,7 @@ ParagraphFontSize = paragraphFontSize
 
     .links-list-mobile
         display none
+        z-index 1
 
     .links-list, .links-list-mobile
         justify-content center
